--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+* {
+  color: #333;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background-color: #f4f4f4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 0 10px;
+  overflow: hidden;
+}
+
+h3 {
+  font-size: 28px;
+  text-align: center;
+  color: #333;
+  border-bottom: 2px solid #e0e0e0;
+  margin-bottom: 20px;
+  padding: 8px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+.col {
+  font-size: 15px;
+}
+
+span {
+  font-size: 12px;
+}
+
+.card {
+  border: none;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.form-control:hover, .form-select:hover {
+  background-color: #f0f0f0;
+}
+
+.form-control[type="number"]::-webkit-inner-spin-button,
+.form-control[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +97,23 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.btn {
+  font-size: 0.8rem;
+  padding: 10px 15px;
+  margin-top: 10px;
+  margin-left: auto;
+  border: none;
+  color: #fff;
+  border-radius: 40px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: block;
+  width: auto;
+  background-color: #BCD7AA;
+}
+
+.btn:hover {
+  background-color: #97B682;
 }
